syntax = "proto3";
package tutorial;

import "google/protobuf/timestamp.proto";
option go_package = "proto/generated_code";
import "proto/enum_demo.proto";

message Person {
  optional string name = 1;
  optional int32 id = 2;  // Unique ID number for this person.
  optional string email = 3;

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;

  optional google.protobuf.Timestamp last_updated = 5;
  map<string, int32> orderToAmount = 6;
  optional DESTINATION favoriteSpot = 7;
}

message SingularCardinalityDemo {
  optional int32 optionalField = 1;
  int32 implicitField = 2;
}

enum PhoneType {
  PHONE_TYPE_UNSPECIFIED = 0;
  PHONE_TYPE_MOBILE = 1;
  PHONE_TYPE_HOME = 2;
  PHONE_TYPE_WORK = 3;
}

// Our address book file is just one of these.
message AddressBook {
  repeated Person people = 1;
}

message PhoneBook {
  repeated Person.PhoneNumber phone_numbers = 1;
}
